syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.muchu.heber.proto";
option java_outer_classname = "ServiceProto";

package proto;

// The greeting service definition.
service UserService {
    // Sends a greeting
    rpc GetUserInfoById (Request) returns (UserInfo) {
    }
}

message Request {
    int64 id = 1;
}
// The response message containing the greetings
message UserInfo {
    string username = 1;
    string password = 2;

}
